fix: .md pre overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@ p,span {
 }
 
 .md > * {
-    @apply my-5;
+    @apply mb-5;
 }
 
 .md h1 {
@@ -57,7 +57,7 @@ p,span {
 }
 
 .md pre {
-    @apply border border-gray-300 bg-gray-50  dark:border-gray-700 dark:bg-gray-900 p-2;
+    @apply border border-gray-300 bg-gray-50  dark:border-gray-700 dark:bg-gray-900 p-2 overflow-x-scroll;
 }
   
 .md code:not(pre>code) {
